RIHAKB-331. Implement file upload
